[package]
name = "x86_vcpu"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.19"
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
x86 = "0.52"
x86_64 = "0.15"
raw-cpuid = "11.0"
numeric-enum-macro = "0.2"

axerrno = "0.1.0"
page_table_entry = "0.5"
page_table_multiarch = "0.5"
memory_addr = "0.3.1"
crate_interface = "0.1"
iced-x86 = { version = "1.12.0", features = [
    "decoder",
    "no_std",
    "intel",
    "op_code_info",
    "encoder",
    "masm"
], default-features = false }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace.git" }
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu.git" }
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api.git" }

[features]
default = ["vmx"]
vmx = []
amd = []
